{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "49002d88-8154-4965-b9cc-d7bc971bb6e8",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "55f2492e-58bf-4527-8207-f92f152cc57f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "c63012c9-75f9-423e-8871-7eebb3e051e7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Button",
                    "id": "a06c29e1-2e44-4c41-b1db-00e8460fc0cb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraReset",
                    "type": "Button",
                    "id": "9383d39b-3ed1-4e91-83c6-3fac506de609",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "97c8492c-b450-478a-8221-5712b7ca9abe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SoftAttack",
                    "type": "Button",
                    "id": "cc7d33a4-bdaf-4d65-b1a7-71ed4dfd3915",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HardAttack",
                    "type": "Button",
                    "id": "dbbb9731-2e94-464f-8577-1d1c0525cb80",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "87a6f5f3-798e-48f2-bbbc-cda0e6b45f16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "1588f5c9-82d6-438b-b667-01ec6afc7463",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d7a667d-3f9a-4c60-9edd-7b5768203d09",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "733dbc2c-27b3-4024-b9fc-7a8f57eaf808",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "305f8533-7346-4281-b3d2-0e036185d21a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30804966-49e8-45b2-9e99-c4cc08a794ca",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82101fd0-5592-413f-b8f2-375872b4c458",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3910e8c-5987-444e-9f76-e4b646bca86e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoftAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d19165fc-b27b-4728-b579-139351a93b8a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HardAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ddd887-e095-4e2e-8fbf-a6578738877a",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7351238-c242-4cce-81bb-c52f5ea50418",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}